--- a/solutions/gan_exercise1_sampledata_solution.ipynb
+++ b/solutions/gan_exercise1_sampledata_solution.ipynb
@@ -293,37 +293,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Discriminator loss: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"../images/discriminator_loss.png\" alt=\"Discriminator loss\" style=\"width: 600px;\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<img src=\"../images/discriminator_loss.png\" alt=\"Discriminator loss\" style=\"width: 600px;\"/>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Discriminator loss: \n",
+    "\n",
+    "![Discriminator loss image](../images/discriminator_loss.png)\n",
+    "\n",
     "In other words, the discriminator tries to output `1` for the real images and `0` for the fake ones. The functions `tf.ones_like` and `tf.zeros_like` can come in useful.\n",
     "\n",
     "You can use the function `tf.nn.sigmoid_cross_entropy_with_logits` to compute the cross entropy."
@@ -345,37 +318,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Generator Loss:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"../images/generator_loss.png\" alt=\"Generator loss\" style=\"width: 600px;\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<img src=\"../images/generator_loss.png\" alt=\"Generator loss\" style=\"width: 600px;\"/>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Generator Loss:\n",
+    "\n",
+    "![Generator loss image](../images/generator_loss.png)\n",
+    "\n",
     "Or, in natural language, the generator tries to make the output of the discriminator be `1` for the generated images."
    ]
   },
