fixed learning rate in ex1 mnist

--- a/solutions/gan_exercise1_autoencoder_mnist_solution.ipynb
+++ b/solutions/gan_exercise1_autoencoder_mnist_solution.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.0002\n",
     "num_steps = 10000\n",
     "n = int(np.sqrt(batch_size))\n",
     "\n",
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.train.AdamOptimizer(learning_rate=0.0002).minimize(l2_loss, var_list=e_vars+d_vars)"
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(l2_loss, var_list=e_vars+d_vars)"
    ]
   },
   {
