Notes for Readme + nvidia-smi for remaining notebooks

--- a/exercises/gan_exercise1_autoencoder_mnist.ipynb
+++ b/exercises/gan_exercise1_autoencoder_mnist.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+    "!(nvidia-smi | grep -q \"has failed\") && echo \"No GPU found!\" || nvidia-smi "
    ]
   },
   {
