--- a/solutions/gan_exercise1_autoencoder_mnist_solution.ipynb
+++ b/solutions/gan_exercise1_autoencoder_mnist_solution.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+    "!(nvidia-smi | grep -q \"has failed\") && echo \"No GPU found!\" || nvidia-smi "
    ]
   },
   {
@@ -122,7 +121,7 @@
    "outputs": [],
    "source": [
     "def deconv2d(x, k_w=3, k_h=3, output_shape=[1,1,1,1], stride=2, padding='SAME', name='deconv', reuse=False):\n",
-    "    with tf.variable_scope(name, reuse=reuse) as scope:\n",
+    "    with tf.variable_scope(name, reuse=reuse):\n",
     "        w = tf.get_variable('w', [k_w, k_h, output_shape[-1], int(x.get_shape()[-1])], \n",
     "                            initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "        b = tf.get_variable('b', [output_shape[-1]], initializer=tf.constant_initializer(0.1))\n",
@@ -137,7 +136,7 @@
    "outputs": [],
    "source": [
     "def decoder(x):\n",
-    "    with tf.variable_scope('decoder') as scope:\n",
+    "    with tf.variable_scope('decoder'):\n",
     "        \n",
     "        g_dim = 64\n",
     "        \n",
