--- a/solutions/gan_exercise2_sampledata_solution.ipynb
+++ b/solutions/gan_exercise2_sampledata_solution.ipynb
@@ -21,9 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you need the GPU, make this a markdown cell, or comment the following lines\n",
-    "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
+    "!(nvidia-smi | grep -q \"has failed\") && echo \"No GPU found!\" || nvidia-smi "
    ]
   },
   {
